# payment-reminder-app

./: .env.example  .gitignore  Dockerfile  README.md  nginx-unit-config.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2022120330_generate_base_models_c892a9642c00.py  2022120437_generate_base_models_14bb4cca9b2b.py  2022120444_generate_base_models_12f267467300.py  2022120448_generate_authtoken_f55199b2e3b1.py  2022121003_generate_authtoken_fa04203b3f72.py
app/: constants.py  main.py  models.py  utils.py
app/api/: api.py  crud_router.py  deps.py
app/api/endpoints/: user.py
app/config/: logger.py  settings.py
app/core/: config.py  session.py
app/models/: __init__.py  authorization.py  base.py  payment.py  reminder.py  user.py
app/schemas/: base.py  responses.py  user.py
