[tool.poetry]
authors = ["drtnn <8david@inbox.ru>"]
description = "FastAPI Payment Reminder API."
name = "payment-reminder"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = "^3.11"

PyJWT = { extras = ["crypto"], version = "^2.5.0" }
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.41" }
alembic = "^1.8.1"
asyncpg = "^0.27.0"
fastapi = "^0.88.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email", "dotenv"], version = "^1.10.2" }
python-multipart = ">=0.0.5,<0.0.6"
toml = "^0.10.2"
sqlalchemy-utils = "^0.38.3"
greenlet = "^2.0.1"
phonenumbers = "^8.13.1"
babel = "^2.11.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^6.0.0"
httpx = "^0.23.1"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
sqlalchemy2-stubs = "^0.0.2-alpha.29"
uvicorn = "^0.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"
